--- a/App/app/src/main/AndroidManifest.xml
+++ b/App/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.migueldemollet.dressmeapp">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +12,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DressMeApp">
+        <activity
+            android:name=".ClotheActivity"
+            android:exported="false"
+            android:label="@string/title_activity_clothe"
+            android:theme="@style/Theme.DressMeApp" />
+        <activity
+            android:name=".ResultActivity"
+            android:exported="false"
+            android:label="@string/title_activity_camara"
+            android:theme="@style/Theme.DressMeApp" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
