--- a/App/app/build.gradle
+++ b/App/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.navigation:navigation-compose:2.4.2'
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
     testImplementation 'junit:junit:4.13.2'
