--- a/App/build.gradle
+++ b/App/build.gradle
@@ -2,6 +2,9 @@ buildscript {
     ext {
         compose_version = '1.0.1'
     }
+    repositories{
+        mavenCentral()
+    }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.1.3' apply false
