--- a/App/build.gradle
+++ b/App/build.gradle
@@ -4,6 +4,11 @@ buildscript {
     }
     repositories{
         mavenCentral()
+        google()
+    }
+    dependencies {
+        classpath 'com.google.gms:google-services:4.3.10'
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.38.1"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
