--- a/App/build.gradle
+++ b/App/build.gradle
@@ -1,12 +1,16 @@
 buildscript {
     ext {
         compose_version = '1.0.1'
+        hilt_version = '2.38.1'
+        coroutines_version = '1.5.1'
     }
     repositories{
         mavenCentral()
         google()
     }
     dependencies {
+        classpath "com.android.tools.build:gradle:7.0.2"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
         classpath 'com.google.gms:google-services:4.3.10'
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.38.1"
     }
