--- a/App/app/build.gradle
+++ b/App/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
 
     implementation("io.coil-kt:coil-compose:2.0.0")
     implementation 'androidx.navigation:navigation-compose:2.4.2'
+    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 
     // Hilt DI
     def hilt_lifecycle_viewmodel = "1.0.0-alpha03"
@@ -89,6 +90,11 @@ dependencies {
 
     implementation platform('com.google.firebase:firebase-bom:28.4.0')
     implementation 'com.google.firebase:firebase-firestore-ktx'
+
+    implementation 'com.android.volley:volley:1.2.1'
+
+    implementation 'com.github.kittinunf.fuel:fuel:2.3.1'
+    implementation 'com.github.kittinunf.fuel:fuel-android:2.3.1'
 
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
