--- a/functions/package.json
+++ b/functions/package.json
@@ -14,10 +14,10 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@google-cloud/vision": "^2.4.2",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.0"
   },
-  
   "devDependencies": {
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
